# CPP_modules

./: .editorconfig  .gitattributes  .gitignore  Makefile_base  README.md  meson.build
.github/workflows/: ci.yaml
apps/: meson.build
apps/Harl/: Harl.cpp  Harl.hpp  main.cpp  meson.build
apps/Phonebook/: a.out  main.cpp
apps/basic_math/: main.cpp  meson.build
apps/brainzz/: Zombie.cpp  Zombie.hpp  main.cpp  meson.build  newZombie.cpp  randomChump.cpp
apps/dreamJob/: Account.cpp  Account.hpp  meson.build  tests.cpp
apps/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  ex00  main.cpp  meson.build
apps/ex01/: meson.build
apps/ex02/: meson.build
apps/ex03/: meson.build
apps/ex04/: meson.build  notes.txt
apps/ex05/: meson.build
apps/ex06/: meson.build
apps/ex07/: meson.build
apps/ex08/: meson.build
apps/ex09/: meson.build
apps/fixed/: main.cpp  meson.build
apps/harlFilter/: main.cpp
apps/hello_world/: main.cpp
apps/megaphone/: a.out  main.cpp
apps/phonebook/: Contact.cpp  Contact.hpp  Phonebook.cpp  Phonebook.hpp  main.cpp  meson.build
apps/sed_losers/: main.cpp  test_file.txt  test_file.txt.replace
apps/this_is_brain/: main.cpp  meson.build
cpp09_repo/: PMERGE_Errors.rtf
include/: meson.build
microshell/: microshell.c
src/: Fixed.cpp  Point.cpp  ScalarConverter.cpp  VectorFunctions.cpp  bsp.cpp  libcpp.cpp  libft_cpp.cpp  maths.cpp  meson.build  practice_test.cpp  string_utils.cpp
tests/: Fixed.cpp  fixedNumbers.cpp  math.cpp  meson.build  string.cpp  tests.hpp
(+250 files in other folders)
